Change method of determining height in attempt to fix issue on mobile devices

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -3,8 +3,7 @@
 }
 
 html, body {
-  height: 100%;
-  min-height: 100%;
+  height: calc(100%);
 }
 
 html {
@@ -14,6 +13,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  height: calc(100%);
   font-family: $base-font-family;
   margin: 0;
 }
